# bb-flockr

./: .gitignore  CLAUDE.md  README.md  flockr.kdl  pyproject.toml
.claude/: settings.json
.claude/agents/: README.md  code-reviewer.md  flockr-config-validator.md  recent-ai-python-grad.md  security-auditor.md
.claude/commands/: chainsaw.md  deploy.md  fix-issue.md  pr-review.md  review.md
.claude/rules/: api-conventions.md  code-style.md  testing.md
.claude/skills/chainsaw-massacre/: SKILL.md
.codex/: AGENTS.md  tips.md  workflow.md
docker/fedora-cnc/: Dockerfile
docker/ssh-target/: Blackbird.java  Dockerfile  Replay.java  authorized_keys.example
examples/: blackbird-debug-recovery.kdl  blackbird-env.conf  blackbird-replay.kdl  blackbird-trace-recovery.kdl  docker-ssh-config.kdl  docker-ssh-runbook.kdl  environment.conf  local-config.kdl  local-runbook.kdl  ssh-smoke.kdl
project-docs/: architecture-decisions.md  architecture-trash-bin.md  comparison-spike-notes.md  full-readme.md  reminders.md
scripts/: dev.sh
src/flockr/: cli.py  context.py  logging.py
tests/: conftest.py  test_cli.py  test_config_load.py  test_config_merge.py  test_config_resolve.py  test_context.py  test_examples.py  test_hocon_adapter.py  test_kdl_adapters.py  test_logging.py  test_runbook_expansion.py  test_runner.py  test_scheduler.py  test_ssh_executor.py
tests/e2e/: debug-runbook.kdl  docker-compose.lab.yaml  docker-compose.yaml  environment.conf  replay-runbook.kdl
tests/fixtures/: runbook-with-config.kdl  sample-config.conf  sticky-stderr.txt  sticky-stdout.txt
(+20 files in other folders)
